Fixed unclickable-ness of button in hero area on mobile

--- a/simple/styles.less
+++ b/simple/styles.less
@@ -20,6 +20,11 @@ h1 {
     margin: 0px;
 }
 
+main {
+    z-index: 1;
+    position: relative;
+}
+
 section {
     padding: 0.1em 1em 1em 1em;
     position: relative;
@@ -36,15 +41,11 @@ section {
         box-shadow: inset 0px -1em 1em rgba(0,0,0,0.2);
         padding-top: 1em;
         text-shadow: 0px 0px 8px rgba(0,0,0,0.6);
-        z-index: 0; //TODO - negative z-index breaks :hover state of anything inside
-        @media(max-width: 768px)  {
-            z-index: -1;
-        }
+        z-index: -1;
 
         @media(max-width: 767px) {
             height: 400px;
         }
-
 
         /////////////
 
